# platform

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
drivers/: CMakeLists.txt  drivers.h
examples/minimal/: CMakeLists.txt  app_main.cpp
libs/: CMakeLists.txt
platform/: stm32f103.cmake  x86.cmake
src/: CMakeLists.txt  main.cpp
src/drivers/: CMakeLists.txt  drivers.cpp  drivers.h
unit_tests/: CMakeLists.txt
unit_tests/drivers/: CMakeLists.txt  unit_test_drivers.cpp
